--- a/workbench/index-apple.html
+++ b/workbench/index-apple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,7 +24,7 @@
       --radius: 20px;
       --radius-sm: 12px;
       --radius-xs: 8px;
-      
+
       --motion: #4c97ff;
       --control: #ffab19;
       --events: #ffd500;
@@ -31,8 +32,15 @@
       --outline: 2px solid rgba(17, 24, 39, 0.45);
     }
 
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
+    * {
+      box-sizing: border-box;
+    }
+
+    html,
+    body {
+      height: 100%;
+    }
+
     body {
       margin: 0;
       color: var(--ink);
@@ -66,6 +74,7 @@
       gap: 10px;
       min-width: 260px;
     }
+
     .logo {
       width: 38px;
       height: 38px;
@@ -78,17 +87,19 @@
       position: relative;
       overflow: hidden;
     }
+
     .logo::before {
       content: "";
       width: 18px;
       height: 18px;
       border-radius: 999px;
-      background: rgba(255,255,255,0.9);
+      background: rgba(255, 255, 255, 0.9);
       position: absolute;
       top: -6px;
       left: -6px;
       transform: rotate(20deg);
     }
+
     .logoFace {
       width: 18px;
       height: 12px;
@@ -99,19 +110,28 @@
       align-items: center;
       padding: 0 3px;
     }
+
     .logoEye {
       width: 3px;
       height: 3px;
       border-radius: 999px;
       background: rgba(17, 24, 39, 0.72);
     }
+
     .brandTitle {
       display: flex;
       flex-direction: column;
       line-height: 1.05;
     }
-    .brandTitle strong { font-size: 14px; }
-    .brandTitle span { font-size: 12px; color: var(--muted); }
+
+    .brandTitle strong {
+      font-size: 14px;
+    }
+
+    .brandTitle span {
+      font-size: 12px;
+      color: var(--muted);
+    }
 
     .topActions {
       display: flex;
@@ -120,6 +140,7 @@
       flex-wrap: wrap;
       justify-content: flex-end;
     }
+
     .pill {
       display: inline-flex;
       align-items: center;
@@ -127,27 +148,50 @@
       padding: 8px 12px;
       border-radius: 999px;
       border: var(--outline);
-      background: rgba(255,255,255,0.9);
-      box-shadow: 0 4px 0 rgba(0,0,0,0.1);
+      background: rgba(255, 255, 255, 0.9);
+      box-shadow: 0 4px 0 rgba(0, 0, 0, 0.1);
       font-size: 12px;
       cursor: pointer;
       user-select: none;
       transition: transform 120ms ease, box-shadow 120ms ease;
     }
-    .pill:hover { transform: translateY(-1px); }
-    .pill:active { transform: translateY(1px); box-shadow: 0 2px 0 rgba(0,0,0,0.1); }
-    .pillPrimary { background: linear-gradient(180deg, #ffffff, #f3fbff); }
+
+    .pill:hover {
+      transform: translateY(-1px);
+    }
+
+    .pill:active {
+      transform: translateY(1px);
+      box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
+    }
+
+    .pillPrimary {
+      background: linear-gradient(180deg, #ffffff, #f3fbff);
+    }
+
     .dot {
       width: 10px;
       height: 10px;
       border-radius: 999px;
-      border: 2px solid rgba(17,24,39,0.55);
+      border: 2px solid rgba(17, 24, 39, 0.55);
       background: #d1d5db;
     }
-    .dot.ok { background: var(--accent-green); }
-    .dot.busy { background: var(--accent-orange); }
-    .dot.bad { background: var(--accent-red); }
-    .statusText { color: var(--muted); }
+
+    .dot.ok {
+      background: var(--accent-green);
+    }
+
+    .dot.busy {
+      background: var(--accent-orange);
+    }
+
+    .dot.bad {
+      background: var(--accent-red);
+    }
+
+    .statusText {
+      color: var(--muted);
+    }
 
     /* Main Layout */
     .layout {
@@ -160,13 +204,25 @@
       align-items: stretch;
       min-height: calc(100vh - 76px);
     }
+
     @media (max-width: 1199px) {
-      .layout { grid-template-columns: 320px 1fr; }
-      .sideRight { grid-column: 1 / -1; }
+      .layout {
+        grid-template-columns: 320px 1fr;
+      }
+
+      .sideRight {
+        grid-column: 1 / -1;
+      }
     }
+
     @media (max-width: 991px) {
-      .layout { grid-template-columns: 1fr; }
-      .brand { min-width: 0; }
+      .layout {
+        grid-template-columns: 1fr;
+      }
+
+      .brand {
+        min-width: 0;
+      }
     }
 
     .panel {
@@ -179,11 +235,13 @@
       display: flex;
       flex-direction: column;
     }
+
     .panel[aria-label="积木库"],
     .panel[aria-label="编程工作区"],
     .panel[aria-label="运行与反馈"] {
       height: 100vh;
     }
+
     .panelHeader {
       padding: 12px 12px 10px 12px;
       display: flex;
@@ -193,31 +251,53 @@
       background: linear-gradient(180deg, #ffffff, #fbfcff);
       border-bottom: 1px solid var(--border);
     }
+
     .panelHeader h2 {
       margin: 0;
       font-size: 13px;
       letter-spacing: 0.2px;
     }
-    .panelBody { padding: 12px; flex: 1; overflow: hidden; display: flex; flex-direction: column; min-height: 0; }
-    .muted { color: var(--muted); font-size: 12px; }
+
+    .panelBody {
+      padding: 12px;
+      flex: 1;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      min-height: 0;
+    }
+
+    .muted {
+      color: var(--muted);
+      font-size: 12px;
+    }
 
     .tabs {
       display: flex;
       gap: 8px;
       flex-wrap: wrap;
     }
+
     .tab {
       padding: 6px 10px;
       border-radius: 999px;
-      border: 1px solid rgba(17,24,39,0.18);
-      background: rgba(255,255,255,0.8);
+      border: 1px solid rgba(17, 24, 39, 0.18);
+      background: rgba(255, 255, 255, 0.8);
       cursor: pointer;
       font-size: 12px;
       user-select: none;
       transition: transform 120ms ease;
     }
-    .tab:hover { transform: translateY(-1px); }
-    .tab.active { border-color: rgba(17,24,39,0.42); background: #1d1d1f; color: white; }
+
+    .tab:hover {
+      transform: translateY(-1px);
+    }
+
+    .tab.active {
+      border-color: rgba(17, 24, 39, 0.42);
+      background: #1d1d1f;
+      color: white;
+    }
 
     .search {
       width: 100%;
@@ -226,10 +306,14 @@
       border: 1px solid var(--border);
       outline: none;
       font-size: 13px;
-      background: rgba(255,255,255,0.9);
+      background: rgba(255, 255, 255, 0.9);
       margin-bottom: 10px;
     }
-    .search:focus { border-color: var(--accent-blue); box-shadow: 0 0 0 4px rgba(0,122,255,0.18); }
+
+    .search:focus {
+      border-color: var(--accent-blue);
+      box-shadow: 0 0 0 4px rgba(0, 122, 255, 0.18);
+    }
 
     .blockTile {
       margin-top: 10px;
@@ -246,7 +330,7 @@
       border-radius: 16px;
       padding: 14px 16px;
       border: 1px solid transparent;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
       cursor: grab;
       user-select: none;
       display: flex;
@@ -255,20 +339,44 @@
       gap: 10px;
       transition: all 0.2s ease;
     }
-    .blk:hover { transform: translateY(-2px); box-shadow: 0 8px 24px rgba(0,0,0,0.12); }
-    .blk:active { cursor: grabbing; transform: translateY(0); }
-    .blk small { font-size: 12px; opacity: 0.8; }
+
+    .blk:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
+    }
+
+    .blk:active {
+      cursor: grabbing;
+      transform: translateY(0);
+    }
+
+    .blk small {
+      font-size: 12px;
+      opacity: 0.8;
+    }
+
     .blkBadge {
       font-size: 11px;
       padding: 2px 8px;
       border-radius: 999px;
-      background: rgba(0,0,0,0.08);
+      background: rgba(0, 0, 0, 0.08);
       font-weight: 500;
     }
 
-    .c-motion { background: linear-gradient(135deg, #aed6ff, #64d2ff); color: #003d7a; }
-    .c-control { background: linear-gradient(135deg, #ffd6a5, #ff9f0a); color: #5c3c00; }
-    .c-events { background: linear-gradient(135deg, #ffd37a, #ffd60a); color: #5c4400; }
+    .c-motion {
+      background: linear-gradient(135deg, #aed6ff, #64d2ff);
+      color: #003d7a;
+    }
+
+    .c-control {
+      background: linear-gradient(135deg, #ffd6a5, #ff9f0a);
+      color: #5c3c00;
+    }
+
+    .c-events {
+      background: linear-gradient(135deg, #ffd37a, #ffd60a);
+      color: #5c4400;
+    }
 
     .workspaceCanvas {
       flex: 1;
@@ -281,14 +389,16 @@
       padding: 12px;
       overflow: auto;
     }
+
     .stack {
       min-height: 32px;
       padding: 6px;
       border-radius: 12px;
     }
+
     .stack.dragOver {
-      outline: 3px solid rgba(0,122,255,0.35);
-      background: rgba(0,122,255,0.08);
+      outline: 3px solid rgba(0, 122, 255, 0.35);
+      background: rgba(0, 122, 255, 0.08);
     }
 
     .inst {
@@ -296,7 +406,7 @@
       margin: 10px 0;
       border-radius: 16px;
       border: 1px solid transparent;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
       padding: 14px 16px;
       cursor: grab;
       user-select: none;
@@ -306,77 +416,131 @@
       gap: 10px;
       transition: all 0.2s ease;
     }
-    .inst:hover { transform: translateY(-2px); box-shadow: 0 8px 24px rgba(0,0,0,0.12); }
-    .inst:active { cursor: grabbing; transform: translateY(0); }
-    .inst.fixed { cursor: default; }
-    .inst.fixed:hover { transform: none; }
+
+    .inst:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
+    }
+
+    .inst:active {
+      cursor: grabbing;
+      transform: translateY(0);
+    }
+
+    .inst.fixed {
+      cursor: default;
+    }
+
+    .inst.fixed:hover {
+      transform: none;
+    }
+
     .instLeft {
       display: flex;
       align-items: center;
       gap: 10px;
       flex-wrap: wrap;
     }
+
     .instTitle {
       font-size: 13px;
       font-weight: 700;
       letter-spacing: 0.2px;
     }
-    .instSub { font-size: 12px; opacity: 0.92; }
-    .instActions { display: flex; gap: 8px; align-items: center; }
+
+    .instSub {
+      font-size: 12px;
+      opacity: 0.92;
+    }
+
+    .instActions {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+    }
+
     .iconBtn {
       width: 30px;
       height: 30px;
       border-radius: 10px;
-      border: 1px solid rgba(0,0,0,0.22);
-      background: rgba(255,255,255,0.7);
+      border: 1px solid rgba(0, 0, 0, 0.22);
+      background: rgba(255, 255, 255, 0.7);
       cursor: pointer;
       display: grid;
       place-items: center;
       transition: all 0.2s ease;
       padding: 0;
     }
-    .iconBtn:hover { background: rgba(255,255,255,1); transform: translateY(-1px); }
-    .iconBtn:active { transform: translateY(0); }
+
+    .iconBtn:hover {
+      background: rgba(255, 255, 255, 1);
+      transform: translateY(-1px);
+    }
+
+    .iconBtn:active {
+      transform: translateY(0);
+    }
 
     .paramInput {
       width: 90px;
       padding: 8px 10px;
       border-radius: 12px;
-      border: 1px solid rgba(0,0,0,0.24);
+      border: 1px solid rgba(0, 0, 0, 0.24);
       outline: none;
       font-size: 13px;
-      background: rgba(255,255,255,0.75);
+      background: rgba(255, 255, 255, 0.75);
       transition: all 0.2s ease;
     }
-    .paramInput:focus { border-color: var(--accent-blue); box-shadow: 0 0 0 4px rgba(0,122,255,0.18); }
+
+    .paramInput:focus {
+      border-color: var(--accent-blue);
+      box-shadow: 0 0 0 4px rgba(0, 122, 255, 0.18);
+    }
 
     .repeatBodyWrap {
       margin-top: 10px;
       padding: 10px;
       border-radius: 14px;
-      border: 2px solid rgba(0,0,0,0.1);
-      background: rgba(255,255,255,0.55);
+      border: 2px solid rgba(0, 0, 0, 0.1);
+      background: rgba(255, 255, 255, 0.55);
       width: 100%;
     }
+
     .repeatBodyTitle {
       font-size: 12px;
-      color: rgba(0,0,0,0.5);
+      color: rgba(0, 0, 0, 0.5);
       margin-bottom: 6px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       gap: 8px;
     }
-    .childIndent { padding-left: 10px; border-left: 3px solid rgba(0,0,0,0.1); }
 
-    .inst-motion { background: linear-gradient(135deg, #aed6ff, #64d2ff); color: #003d7a; }
-    .inst-control { background: linear-gradient(135deg, #ffd6a5, #ff9f0a); color: #5c3c00; }
-    .inst-events { background: linear-gradient(135deg, #ffd37a, #ffd60a); color: #5c4400; }
+    .childIndent {
+      padding-left: 10px;
+      border-left: 3px solid rgba(0, 0, 0, 0.1);
+    }
+
+    .inst-motion {
+      background: linear-gradient(135deg, #aed6ff, #64d2ff);
+      color: #003d7a;
+    }
+
+    .inst-control {
+      background: linear-gradient(135deg, #ffd6a5, #ff9f0a);
+      color: #5c3c00;
+    }
+
+    .inst-events {
+      background: linear-gradient(135deg, #ffd37a, #ffd60a);
+      color: #5c4400;
+    }
 
     .controls {
       display: grid;
       gap: 10px;
     }
+
     .btn {
       height: 48px;
       border-radius: 14px;
@@ -392,21 +556,37 @@
       transition: all 0.2s ease;
       letter-spacing: -0.3px;
     }
-    .btn:hover { transform: translateY(-2px); }
-    .btn:active { transform: translateY(0); }
-    .btn:disabled { opacity: 0.5; cursor: not-allowed; transform: none; }
+
+    .btn:hover {
+      transform: translateY(-2px);
+    }
+
+    .btn:active {
+      transform: translateY(0);
+    }
+
+    .btn:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+      transform: none;
+    }
 
     .btnGreen {
       background: linear-gradient(135deg, #007aff, #5856d6);
       color: white;
       box-shadow: 0 4px 12px rgba(0, 122, 255, 0.3);
     }
-    .btnGreen:hover { box-shadow: 0 8px 24px rgba(0, 122, 255, 0.4); }
+
+    .btnGreen:hover {
+      box-shadow: 0 8px 24px rgba(0, 122, 255, 0.4);
+    }
+
     .btnRed {
       background: linear-gradient(135deg, #ff453a, #ff375f);
       color: white;
       box-shadow: 0 4px 12px rgba(255, 69, 58, 0.3);
     }
+
     .btnGhost {
       background: var(--bg);
       color: var(--ink);
@@ -419,11 +599,13 @@
       flex-wrap: wrap;
       align-items: center;
     }
+
     .label {
       font-size: 12px;
       color: var(--muted);
       min-width: 92px;
     }
+
     .textInput {
       flex: 1;
       min-width: 160px;
@@ -432,11 +614,20 @@
       border: 1px solid var(--border);
       outline: none;
       font-size: 13px;
-      background: rgba(255,255,255,0.92);
+      background: rgba(255, 255, 255, 0.92);
       transition: all 0.2s ease;
     }
-    .textInput:focus { border-color: var(--accent-blue); box-shadow: 0 0 0 4px rgba(0,122,255,0.18); background: white; }
-    .miniInput { width: 110px; }
+
+    .textInput:focus {
+      border-color: var(--accent-blue);
+      box-shadow: 0 0 0 4px rgba(0, 122, 255, 0.18);
+      background: white;
+    }
+
+    .miniInput {
+      width: 110px;
+    }
+
     .toggle {
       display: inline-flex;
       gap: 8px;
@@ -444,13 +635,16 @@
       padding: 6px 10px;
       border-radius: 999px;
       border: 1px solid var(--border);
-      background: rgba(255,255,255,0.85);
+      background: rgba(255, 255, 255, 0.85);
       cursor: pointer;
       user-select: none;
       font-size: 12px;
       transition: all 0.2s ease;
     }
-    .toggle:hover { background: rgba(255,255,255,1); }
+
+    .toggle:hover {
+      background: rgba(255, 255, 255, 1);
+    }
 
     .logBox {
       height: 200px;
@@ -463,23 +657,48 @@
       line-height: 1.4;
       flex: 1;
     }
-    .logItem { display: flex; gap: 10px; margin-bottom: 8px; }
-    .logTime { color: var(--muted); min-width: 54px; }
-    .logMsg { color: var(--ink); }
-    .logOk { color: var(--accent-green); font-weight: 500; }
-    .logBad { color: var(--accent-red); font-weight: 500; }
-    .logHint { color: var(--muted); }
+
+    .logItem {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 8px;
+    }
+
+    .logTime {
+      color: var(--muted);
+      min-width: 54px;
+    }
+
+    .logMsg {
+      color: var(--ink);
+    }
+
+    .logOk {
+      color: var(--accent-green);
+      font-weight: 500;
+    }
+
+    .logBad {
+      color: var(--accent-red);
+      font-weight: 500;
+    }
+
+    .logHint {
+      color: var(--muted);
+    }
 
     .previewSection {
       padding-bottom: 16px;
       border-bottom: 1px solid var(--border);
       margin-bottom: 16px;
     }
+
     .previewSection h3 {
       margin: 0 0 12px 0;
       font-size: 13px;
       letter-spacing: 0.2px;
     }
+
     .previewBox {
       height: 160px;
       border-radius: 16px;
@@ -489,20 +708,29 @@
       overflow: hidden;
       border: 1px solid var(--border);
     }
+
     .robotPreview {
       font-size: 64px;
       animation: float 3s ease-in-out infinite;
     }
+
     @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
+
+      0%,
+      100% {
+        transform: translateY(0);
+      }
+
+      50% {
+        transform: translateY(-10px);
+      }
     }
 
     /* Modal */
     .modalOverlay {
       position: fixed;
       inset: 0;
-      background: rgba(0,0,0,0.5);
+      background: rgba(0, 0, 0, 0.5);
       display: none;
       align-items: center;
       justify-content: center;
@@ -510,14 +738,19 @@
       z-index: 50;
       backdrop-filter: blur(4px);
     }
-    .modalOverlay.open { display: flex; }
+
+    .modalOverlay.open {
+      display: flex;
+    }
+
     .modal {
       width: min(760px, 100%);
       border-radius: 24px;
       background: #fff;
-      box-shadow: 0 24px 60px rgba(0,0,0,0.25);
+      box-shadow: 0 24px 60px rgba(0, 0, 0, 0.25);
       overflow: hidden;
     }
+
     .modalHeader {
       padding: 20px 20px 16px 20px;
       display: flex;
@@ -526,23 +759,49 @@
       background: linear-gradient(180deg, #ffffff, #f8fafc);
       border-bottom: 1px solid var(--border);
     }
-    .modalHeader h3 { margin: 0; font-size: 17px; font-weight: 600; letter-spacing: -0.4px; }
-    .modalBody { padding: 20px; }
+
+    .modalHeader h3 {
+      margin: 0;
+      font-size: 17px;
+      font-weight: 600;
+      letter-spacing: -0.4px;
+    }
+
+    .modalBody {
+      padding: 20px;
+    }
+
     .helpGrid {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 12px;
     }
+
     @media (max-width: 720px) {
-      .helpGrid { grid-template-columns: 1fr; }
+      .helpGrid {
+        grid-template-columns: 1fr;
+      }
     }
+
     .helpCard {
       border-radius: 16px;
       background: var(--bg);
       padding: 16px;
     }
-    .helpCard h4 { margin: 0 0 8px 0; font-size: 14px; font-weight: 600; }
-    .helpCard p { margin: 0; font-size: 13px; color: var(--muted); line-height: 1.5; }
+
+    .helpCard h4 {
+      margin: 0 0 8px 0;
+      font-size: 14px;
+      font-weight: 600;
+    }
+
+    .helpCard p {
+      margin: 0;
+      font-size: 13px;
+      color: var(--muted);
+      line-height: 1.5;
+    }
+
     .kbd {
       display: inline-block;
       padding: 2px 6px;
@@ -555,6 +814,7 @@
     }
   </style>
 </head>
+
 <body>
   <header class="topbar">
     <div class="brand" aria-label="机器人积木编程工作台">
@@ -758,6 +1018,7 @@
       { cat: 'motion', type: 'front_back', title: '前后摆', subtitle: '摇一摇', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'wave_hand', title: '挥挥手', subtitle: 'Wave', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'scared', title: '害怕', subtitle: '哎呀！', className: 'c-motion', badge: '运动' },
+      { cat: 'motion', type: 'frog_jump', title: '青蛙跳', subtitle: '青蛙跳', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'moonwalk_L', title: '太空步', subtitle: 'Moonwalk', className: 'c-motion', badge: '运动' },
       { cat: 'control', type: 'wait', title: '等待', subtitle: '暂停一会儿', className: 'c-control', badge: '控制' },
       { cat: 'control', type: 'repeat', title: '重复', subtitle: '循环执行', className: 'c-control', badge: '控制' },
@@ -1575,4 +1836,5 @@
     init()
   </script>
 </body>
+
 </html>
