Add hide action to UI

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <div class='button' id='push_up'>PushUp</div>
             <div class='button' id='front_back'>FrontBack</div>
             <div class='button' id='wave_hand'>WaveHand</div>
+            <div class='button' id='hide'>Hide</div>
             <div class='button' id='scared'>Scared</div>
             <div class='button' id='frog_jump'>Frog Jump</div>
         </div>
