--- a/workbench/index.html
+++ b/workbench/index.html
@@ -928,6 +928,7 @@
       { cat: 'motion', type: 'push_up', title: '俯卧撑', subtitle: '加油！', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'front_back', title: '前后摆', subtitle: '摇一摇', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'wave_hand', title: '挥挥手', subtitle: 'Wave', className: 'c-motion', badge: '运动' },
+      { cat: 'motion', type: 'hide', title: '躲起来', subtitle: 'Hide', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'scared', title: '害怕', subtitle: '哎呀！', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'frog_jump', title: '青蛙跳', subtitle: '青蛙跳', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'moonwalk_L', title: '太空步', subtitle: 'Moonwalk', className: 'c-motion', badge: '运动' },
