add 2 action into pages

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
             <div class='button' id='hide'>Hide</div>
             <div class='button' id='scared'>Scared</div>
             <div class='button' id='frog_jump'>Frog Jump</div>
+            <div class='button' id='relax'>Relax</div>
+            <div class='button' id='relax2'>Relax2</div>
         </div>
     </div>
 
