--- a/workbench/index.html
+++ b/workbench/index.html
@@ -931,6 +931,8 @@
       { cat: 'motion', type: 'hide', title: '躲起来', subtitle: 'Hide', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'scared', title: '害怕', subtitle: '哎呀！', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'frog_jump', title: '青蛙跳', subtitle: '青蛙跳', className: 'c-motion', badge: '运动' },
+      { cat: 'motion', type: 'relax', title: '放松', subtitle: '放松', className: 'c-motion', badge: '运动' },
+      { cat: 'motion', type: 'relax2', title: '二段放松', subtitle: '二段放松', className: 'c-motion', badge: '运动' },
       { cat: 'motion', type: 'moonwalk_L', title: '太空步', subtitle: 'Moonwalk', className: 'c-motion', badge: '运动' },
       { cat: 'control', type: 'wait', title: '等待', subtitle: '暂停一会儿', className: 'c-control', badge: '控制' },
       { cat: 'control', type: 'repeat', title: '重复', subtitle: '循环执行', className: 'c-control', badge: '控制' },
